fix: username hidden if too long

--- a/client/style/feed.css
+++ b/client/style/feed.css
@@ -70,9 +70,7 @@
     font-size: 0.9rem;
     font-weight: 600;
     margin: 5px;
-    white-space: nowrap;
     text-overflow: ellipsis;
-    max-width: 100%;
     overflow: hidden;
 }
 
